removed leading slash for references

--- a/src/photos.html
+++ b/src/photos.html
@@ -19,10 +19,10 @@
             <!-- Navbar on Large screens -->
             <div class="w3-hide-small w3-hide-medium w3-center">
                 <div class="w3-bar" id="myNavbar">
-                    <a href="/#home" class="w3-bar-item w3-button w3-padding-large w3-margin-right "><i class="fa fa-home w3-padding-small"></i>HOME</a>
-                    <a href="/#about" class="w3-bar-item w3-button w3-padding-large w3-margin-right"><i class="fa fa-user w3-padding-small"></i> ABOUT</a>
-                    <a href="/#Camo" class="w3-bar-item w3-button w3-padding-large w3-margin-right"><i class="fa fa-th w3-padding-small"></i> CAMO</a>
-                    <a href="/#team" class="w3-bar-item w3-button w3-padding-large w3-margin-right"><i class="fa fa-users w3-padding-small"></i> TEAM</a>
+                    <a href="#home" class="w3-bar-item w3-button w3-padding-large w3-margin-right "><i class="fa fa-home w3-padding-small"></i>HOME</a>
+                    <a href="#about" class="w3-bar-item w3-button w3-padding-large w3-margin-right"><i class="fa fa-user w3-padding-small"></i> ABOUT</a>
+                    <a href="#Camo" class="w3-bar-item w3-button w3-padding-large w3-margin-right"><i class="fa fa-th w3-padding-small"></i> CAMO</a>
+                    <a href="#team" class="w3-bar-item w3-button w3-padding-large w3-margin-right"><i class="fa fa-users w3-padding-small"></i> TEAM</a>
                     <a href="/#contact" class="w3-bar-item w3-button w3-padding-large w3-margin-right"><i class="fa fa-envelope w3-padding-small"></i> CONTACT</a>
                     <a href="photos.html" class="w3-bar-item w3-button w3-padding-large w3-margin-right"><i class="fa fa-photo w3-padding-small"></i> PHOTOS</a>
                 </div>
@@ -32,10 +32,10 @@
                 <a class="w3-bar-item w3-button w3-hover-black w3-right" href="javascript:void(0);" onclick="toggleFunction()" title="Toggle Navigation Menu">
                     <i class="fa fa-bars"></i></a>
                 <div id="navDemo" class="w3-bar-block w3-black w3-hide">
-                    <a href="/#home-small" class="w3-bar-item w3-button" onclick="toggleFunction()"><i class="fa fa-home w3-padding"></i>HOME</a>
-                    <a href="/#about" class="w3-bar-item w3-button" onclick="toggleFunction()"><i class="fa fa-user w3-padding"></i>ABOUT</a>
-                    <a href="/#Camo" class="w3-bar-item w3-button" onclick="toggleFunction()"><i class="fa fa-th w3-padding"></i>CAMO</a>
-                    <a href="/#team" class="w3-bar-item w3-button" onclick="toggleFunction()"><i class="fa fa-users w3-padding"></i>TEAM</a>
+                    <a href="#home-small" class="w3-bar-item w3-button" onclick="toggleFunction()"><i class="fa fa-home w3-padding"></i>HOME</a>
+                    <a href="#about" class="w3-bar-item w3-button" onclick="toggleFunction()"><i class="fa fa-user w3-padding"></i>ABOUT</a>
+                    <a href="#Camo" class="w3-bar-item w3-button" onclick="toggleFunction()"><i class="fa fa-th w3-padding"></i>CAMO</a>
+                    <a href="#team" class="w3-bar-item w3-button" onclick="toggleFunction()"><i class="fa fa-users w3-padding"></i>TEAM</a>
                     <a href="/#contact" class="w3-bar-item w3-button" onclick="toggleFunction()"><i class="fa fa-envelope w3-padding"></i>CONTACT</a>
                     <a href="photos.html" class="w3-bar-item w3-button" onclick="toggleFunction()"><i class="fa fa-photo w3-padding"></i>PHOTOS</a>  
                 </div>
