--- a/src/photos.html
+++ b/src/photos.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">  <!-- For social media icons -->
   <!-- Internal styles -->
-  <link rel="stylesheet" href="src/style.css">
+  <link rel="stylesheet" href="/src/style.css">
 </head>
 <body>
     <header>
@@ -19,10 +19,10 @@
             <!-- Navbar on Large screens -->
             <div class="w3-hide-small w3-hide-medium w3-center">
                 <div class="w3-bar" id="myNavbar">
-                    <a href="#home" class="w3-bar-item w3-button w3-padding-large w3-margin-right "><i class="fa fa-home w3-padding-small"></i>HOME</a>
-                    <a href="#about" class="w3-bar-item w3-button w3-padding-large w3-margin-right"><i class="fa fa-user w3-padding-small"></i> ABOUT</a>
-                    <a href="#Camo" class="w3-bar-item w3-button w3-padding-large w3-margin-right"><i class="fa fa-th w3-padding-small"></i> CAMO</a>
-                    <a href="#team" class="w3-bar-item w3-button w3-padding-large w3-margin-right"><i class="fa fa-users w3-padding-small"></i> TEAM</a>
+                    <a href="/#home" class="w3-bar-item w3-button w3-padding-large w3-margin-right "><i class="fa fa-home w3-padding-small"></i>HOME</a>
+                    <a href="/#about" class="w3-bar-item w3-button w3-padding-large w3-margin-right"><i class="fa fa-user w3-padding-small"></i> ABOUT</a>
+                    <a href="/#Camo" class="w3-bar-item w3-button w3-padding-large w3-margin-right"><i class="fa fa-th w3-padding-small"></i> CAMO</a>
+                    <a href="/#team" class="w3-bar-item w3-button w3-padding-large w3-margin-right"><i class="fa fa-users w3-padding-small"></i> TEAM</a>
                     <a href="/#contact" class="w3-bar-item w3-button w3-padding-large w3-margin-right"><i class="fa fa-envelope w3-padding-small"></i> CONTACT</a>
                     <a href="photos.html" class="w3-bar-item w3-button w3-padding-large w3-margin-right"><i class="fa fa-photo w3-padding-small"></i> PHOTOS</a>
                 </div>
